--- a/Project_3/templates/search.html
+++ b/Project_3/templates/search.html
@@ -23,25 +23,27 @@
       </a>
     </div>
   </header>
+
   <main class="container">
-    <div class="search">
-      <form action="/" class="search__form">
-        <input type="search" class="search__input">
+      <div class="search">
+      <form action="/search" class="search__form">
+        <input type="search" class="search__input" name="s">
       </form>
+    </div>
       <p class="search__results">Найдено постов: {{ count_post }}</p>
     </div>
     {% for post in posts %}
     <section class="items">
       <div class="items__item item">
         <div class="item__top">
-          <a href="/user-feed.html" class="item__head">
+          <a href="/user/{{ post.poster_name }}" class="item__head">
             <div class="item__ava-wrap">
-              <img src="{{post.poster_avatar}}" alt="" class="item__ava" width="47">
+              <img src="{{ post.poster_avatar }}" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">{{ post.poster_name }}</span>
           </a>
         </div>
-        <a href="/post.html" class="item__post-link">
+        <a href="/posts/{{post.pk}}" class="item__post-link">
           <img src="{{ post.pic }}" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="/tag.html" class="item__tag">#food</a> {{ post.content|truncate(50) }}</p>
